<resources>
    <string name="app_name">Petagram</string>
    <string name="img_nav">Icono de petagram</string>
    <string name="img_card_mascota">Imagen de la mascota</string>

    <string name="raiting">raiting</string>
    <string name="nombre">nombre</string>

    <string name="key_mascota_favorita">MASCOTA</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_nombre">Nombre</string>
    <string name="label_email">Email</string>
    <string name="label_descripcion">Descripcion</string>
    <string name="label_title_form">Comentario</string>

</resources>